Last updated 3/29/2023, minor changes

--- a/I310D_DataBias.ipynb
+++ b/I310D_DataBias.ipynb
@@ -2,11 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "d2f2c47e",
+   "metadata": {},
+   "source": [
+    "# Assignment 10: Data Bias"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d96bf9fb",
    "metadata": {},
    "source": [
     "# Forming a Hypothesis\n",
-    "Hypothesis: The Perspective API will be more likely to mark longer comments correctly for toxicity than shorter comments.\n",
+    "My Hypothesis: The Perspective API will be more likely to mark longer comments correctly for toxicity than shorter comments.\n",
     "- Criteria: If the comment is less than 100 characters, mark as a short comment, else, mark as a long comment"
    ]
   },
@@ -20,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "846da322",
    "metadata": {},
    "outputs": [],
@@ -36,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "daad6d2e",
    "metadata": {},
    "outputs": [
@@ -45,8 +53,8 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: scikit-learn==1.2.1 in c:\\users\\zach soo\\anaconda3\\lib\\site-packages (1.2.1)\n",
-      "Requirement already satisfied: scipy>=1.3.2 in c:\\users\\zach soo\\anaconda3\\lib\\site-packages (from scikit-learn==1.2.1) (1.9.1)\n",
       "Requirement already satisfied: joblib>=1.1.1 in c:\\users\\zach soo\\anaconda3\\lib\\site-packages (from scikit-learn==1.2.1) (1.2.0)\n",
+      "Requirement already satisfied: scipy>=1.3.2 in c:\\users\\zach soo\\anaconda3\\lib\\site-packages (from scikit-learn==1.2.1) (1.9.1)\n",
       "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\zach soo\\anaconda3\\lib\\site-packages (from scikit-learn==1.2.1) (2.2.0)\n",
       "Requirement already satisfied: numpy>=1.17.3 in c:\\users\\zach soo\\anaconda3\\lib\\site-packages (from scikit-learn==1.2.1) (1.21.5)\n"
      ]
@@ -134,7 +142,7 @@
        "4     Before adding a new product to the list mak...    no  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "96eb1afb",
    "metadata": {},
    "outputs": [
@@ -220,7 +228,7 @@
        "4     Before adding a new product to the list mak..."
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "2b79268c",
    "metadata": {},
    "outputs": [],
@@ -272,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "fb2a74ea",
    "metadata": {
     "scrolled": true
@@ -381,7 +389,7 @@
        "[75 rows x 2 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +400,7 @@
     "import os \n",
     "from dotenv import load_dotenv\n",
     "# Get API key from .env file\n",
-    "load_dotenv('/Users/Zach Soo/I310D_Assignment10/api.env')\n",
+    "load_dotenv('/Users/Zach Soo/I310D_DataBias/api.env')\n",
     "API_KEY = os.environ.get(\"myapi\")\n",
     "# Build API\n",
     "client = discovery.build( \"commentanalyzer\",\n",
@@ -437,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "5b345d55",
    "metadata": {},
    "outputs": [],
@@ -451,12 +459,12 @@
    "metadata": {},
    "source": [
     "# Perform Descriptive Statistics on Test Dataset\n",
-    "- I performed descriptive statistics on the test dataset to determine normality + distribution of the dataset"
+    "I performed descriptive statistics on the test dataset to determine normality + distribution of the dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "b8924324",
    "metadata": {},
    "outputs": [
@@ -474,7 +482,7 @@
        "Name: Toxicity Score, dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "5e0f7240",
    "metadata": {},
    "outputs": [
@@ -497,7 +505,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -545,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "34dcbf52",
    "metadata": {},
    "outputs": [
@@ -607,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "c3ffc982",
    "metadata": {},
    "outputs": [
@@ -904,7 +912,7 @@
        "31                    0.010870             0  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -923,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "id": "130aa1c7",
    "metadata": {},
    "outputs": [
@@ -1308,7 +1316,7 @@
        "42                    0.042162             0  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1329,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "id": "f354ae27",
    "metadata": {},
    "outputs": [
@@ -1362,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "id": "218aecfe",
    "metadata": {},
    "outputs": [
